# small-projects

./: .gitignore
3D-Puzzle/: .gitignore  CMakeLists.txt  README  README.md
3D-Puzzle/include/: help.hpp  print.hpp  puzzle.hpp  solve.hpp
3D-Puzzle/src/: print.cpp  puzzle.cpp  solve.cpp
Cellular-Automaton/: CMakeLists.txt
Cellular-Automaton/include/glad/: glad.h
Cellular-Automaton/shader/: update.glsl
Cellular-Automaton/shaders/: update.glsl  update_shader.glsl
Cellular-Automaton/src/: abstract_game.hpp  application.cpp  application.hpp  exceptions.hpp  fps_counter.cpp  fps_counter.hpp  fps_limiter.cpp  fps_limiter.hpp  glad.c  shaders.hpp  util.cpp  util.hpp  view_port.cpp  view_port.hpp
Cellular-Automaton/src/conway/: conways-game.cpp  conways-game.hpp  game-gpu.cpp  game-gpu.hpp  game.cpp  game.hpp  renderer.cpp  renderer.hpp  universe.cpp  universe.hpp
Cellular-Automaton/src/conway-gpu/: conways-game.cpp  conways-game.hpp
Conways-Game/: Makefile
Conways-Game-Cuda/src/: main.cu
Conways-Game/release/: conways-game.go
Conways-Game/src/: main.go
Conways-Game/src/console/: console.go
Conways-Game/src/game/: game.go  padding.go
